fix invisible profile image

--- a/SASS/main.scss
+++ b/SASS/main.scss
@@ -339,14 +339,10 @@ p{
 @import 'mini';
 
 .profile-image{
-  position:relative;
   width:200px;
   height:200px;
   border-radius: 50%;
   background-color: black;
-  opacity:0;
-  transform:rotate(-10deg);
-  transform:scale(0.9);
 }
 
 .res-image{
